--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,5 +18,12 @@
   list-style: none;
   padding: 0%;
   margin: 0%;
+}
 
+.listItem {
+  margin: 0 0 1.25rem;
+}
+
+.lightText {
+  color: #666
 }
